<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/shape_box_15dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_margin="6dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dec_image_project"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/img_default" />
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageIconH"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/icon_headline"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headline" />

    <ImageView
        android:id="@+id/imageIconTime"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/shape_box_15dp"
        android:contentDescription="@string/icon_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:srcCompat="@drawable/img_time1" />

    <TextView
        android:id="@+id/title_project"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/regular"
        android:maxLines="1"
        android:text="@string/title_item"
        android:textColor="@color/color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageIconH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageIconH"
        app:layout_constraintTop_toTopOf="@+id/imageIconH" />

    <TextView
        android:id="@+id/date_project"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/date_item"
        android:textColor="@color/color_text"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageIconTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageIconTime"
        app:layout_constraintTop_toTopOf="@+id/imageIconTime" />
</androidx.constraintlayout.widget.ConstraintLayout>